# motionanalyzer

./: .cursorignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  GITHUB_SETUP.md  MIGRATION_GUIDE.md  README.md  REFACTOR_SUMMARY.md  RELEASE_INSTRUCTIONS.md  RELEASE_NOTES_v0.2.0.md  backup-manifest.json  pyproject.toml  requirements-gpu.txt
.cursor/: mcp.json
artifacts/: INDEX.md
configs/: crack_model_default.json  internal_eval.template.json
docs/: AI_MODELING_PLAYBOOK.md  ANALYSIS_SCENARIOS_AND_OUTPUT_EVALUATION.md  BLUEPRINT_SETUP_CHECKLIST.md  CHANGEPOINT_DETECTION.md  CRACK_DETECTION_ROADMAP.md  DEVELOPMENT_ROADMAP_FINAL.md  DREAM_CRACK_LIKE_ANOMALY.md  DREAM_DRAEM_REFERENCE.md  DREAM_FEWSHOT_REAL_STRATEGY.md  EXE_LOCAL_TEST_GUIDE.md  FINAL_SUMMARY_PRE_RELEASE.md  GPU_REMOTE_STRATEGY.md  GPU_TODO_LIST.md  GUI_ARCHITECTURE.md  GUI_TEST_SCENARIOS_REPORT.md  INDEX.md  INTERNAL_REALDATA_SETUP.md  INTERNAL_REALDATA_TEST_SCENARIOS.md  KNOWLEDGE_FPCB_PHYSICS_CHEMISTRY.md  ML_SYNTHETIC_DATA_GUIDE.md  OFFICE_PC_WORKFLOW.md  PHASE2_EXECUTION_RUNBOOK.md  PHASE2_ML_REVIEW.md  PHASE_B_INSIGHTS.md  PIPELINE_SETUP_COMPLETE.md  PRE_RELEASE_CHECKLIST.md  PROJECT_GOALS.md  PROJECT_READINESS_ASSESSMENT.md  RELEASE_NOTES_TEMPLATE.md  SECURE_TEST_POLICY.md  SI_UNITS_AND_GUI_UPDATE_PLAN.md  SYNTHETIC_DATA_ENHANCEMENT_PLAN.md  SYNTHETIC_DATA_SPEC.md  SYNTHETIC_MODEL_FPCB.md  UNIFIED_DEVELOPMENT_PLAN.md  USER_GUIDE.md  VER7_DEV_PLAN.md
indexes/: corpus-index.json
notebooks/: 00_setup_gpu_env.ipynb  04_full_pipeline_100k.ipynb
reports/: INDEX.md  (+3 more)
(+154 files in other folders)
