[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motionanalyzer"
version = "0.2.0"
description = "Physics-based time-series motion analyzer from contour point frames."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "motionanalyzer contributors" }]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.13",
  "matplotlib>=3.9",
  "plotly>=5.23",
  "streamlit>=1.39",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
  "mypy>=1.11",
  "pre-commit>=3.8",
]
build = [
  "pyinstaller>=6.10",
]

[project.scripts]
motionanalyzer = "motionanalyzer.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
ignore_missing_imports = true
explicit_package_bases = true
